<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello_world">Hello World!</string>
    <string name="app_name">Spot</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_text">AddText</string>
    <string name="message">Enter your moment here</string>
    <string name="title">Enter your title here</string>
    <string name="submit">Submit</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_main"></string>
    <string name="title_activity_add">Add a Moment</string>
    <string name="title_activity_add_photo">Share your photo</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_add_sound">Share the sounds around you</string>
    <string name="title_activity_add_quote">Share a quote</string>
    <string name="title_activity_add_video">Share a video</string>
    <string name="title_activity_add_link">Share a link</string>
    <string name="URL">Enter your URL here</string>
    <string name="first_visitor">You are the first person to SPOT this location! Be sure to put this spot on the map</string>
    <string name="icons_attribution">Icons designed by Cris Dobbins from the Noun Project.</string>
    <string name="icon_link">Get them here</string>
    <string name="add_info">What would you like to share?</string>
    <string name="photo_attribution">Photos taken from the University of Michigan School of Information website. si.umich.edu</string>
    <string name="about">This app was developed by Sylvie Zhang and Kathy Kosinski for the University of Michigan School of Information Fall 2014 SI 543.</string>
    <string name="moment1">August 12, 2014- We finally finished coding our Android app!!!!</string>
    <string name="text_moment"> \"Bro, your treasure is so lame.\" \n\"Whoah bro.\" \n\"My treasure is better bro. Come and see it...\" \n\"But bro it\'s just a mirror.\" \n\"You can see my greatest treasure inside.\" \n\"Bro...\"</string>
    <string name="SIlink">This is definitely my default homepage now: <a href="https://www.si.umich.edu/">https://www.si.umich.edu/</a></string>
    <string name="announcement">Finally figured out how to reach the Career Development Office from 2255. This is a big moment in my life.</string>
    <string name="title_activity_test_dialog">Spot</string>
    <string name="title_activity_photo1">Spot</string>
    <string name="LoremIpsum">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="title_activity_quote">Moment</string>
    <string name="title_activity_photo2">Moment</string>
    <string name="title_activity_text">Moment</string>
    <string name="title_activity_android_gpstracking">AndroidGPSTracking</string>
    <string name="title_activity_mock_location">MockLocation</string>
    <string name="title_single_list_item_view">Moment</string>
    <string name="title_activity_overview">OverviewActivity</string>
    <string name="title_activity_moment_detail">A Special Moment...</string>

</resources>
