<!--Kathy Kosinski-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.ski.spot.About"
    android:weightSum="1"
    android:orientation="vertical"
    android:background="#3e453d">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:src="@drawable/spot_logo" />

    <TextView
        android:layout_width="292dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/icons_attribution"
        android:id="@+id/textView"
        android:layout_weight="0.10"
        android:layout_gravity="left"
        android:layout_marginLeft="15dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="187dp"
        android:layout_height="wrap_content"
        android:text="@string/icon_link"
        android:id="@+id/button"
        android:layout_weight="0.10"
        android:layout_margin="15dp"
        android:layout_gravity="left" />

    <TextView
        android:layout_width="319dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/about"
        android:id="@+id/textView3"
        android:layout_weight="0.49"
        android:layout_margin="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:layout_gravity="left" />

</LinearLayout>
